--- a/largest-pallindrome-in-string.html
+++ b/largest-pallindrome-in-string.html
@@ -24,7 +24,7 @@
           subString === subString.split("").reverse().join("") &&
           subString.length > newString.length
         ) {
-          // Set maxPalindrome to the new substring
+          // Set newString to the new substring
           newString = subString;
         }
       }
